--- a/public/index.html
+++ b/public/index.html
@@ -427,7 +427,7 @@ Like: www.facebook.com/abhaytalreja.me
         <h1 class="text-brand-dark text-xl font-bold mx-8 mt-6">Dashboard</h1>
         <div class="md:flex md:flex-1 md:flex-col md:flex-wrap p-5 h-full">
           <!-- Quick Stats card -->
-          <div class="mx-auto w-full px-2 flex flex-row">
+          <div class="mx-auto w-full flex flex-row">
             <!-- Cards -->
             <div class="flex flex-wrap h-32 w-1/3 m-2">
               <div class="w-full p-4 bg-white rounded-lg border-gray-300 border">
@@ -491,28 +491,8 @@ Like: www.facebook.com/abhaytalreja.me
           </div>
 
           <div class="md:flex md:flex-wrap md:flex-row w-full">
-            <!-- Weekly Commisions Card -->
-            <div class="md:w-1/4 m-3 bg-white rounded-md p-2">
-              <div class="flex flex-col mb-4 px-4">
-                <h3 class="text-brand-dark text-lg font-bold">Weekly Commissions</h3>
-                <span class="text-gray-700 text-sm">by Most Sales in a Week</span>
-              </div>
-              <div class="relative" style="height:300px">
-                <canvas id="bar-chart"></canvas>
-              </div>
-            </div>
-            <!-- Sales by Month Card -->
-            <div class="md:w-1/4 m-3 bg-gray-800 text-white rounded-md p-2">
-              <div class="flex flex-col mb-4 px-4">
-                <h3 class="text-lg font-bold">Sales By Month</h3>
-                <span class="text-sm">by Most Productive Month</span>
-              </div>
-              <div class="relative bg-gray-800 p-2 rounded-md" style="height:300px">
-                <canvas id="line-chart"></canvas>
-              </div>
-            </div>
             <!-- Weekly Stats Card -->
-            <div class="md:w-1/4 md:flex-grow m-2 bg-white rounded-md p-2">
+            <div class="md:w-1/3 m-2 bg-white rounded-md p-2">
               <div class="flex flex-row justify-between">
                 <div class="flex flex-col px-4">
                   <h3 class="text-brand-dark text-lg font-bold">Weekly Sales Stats</h3>
@@ -580,6 +560,26 @@ Like: www.facebook.com/abhaytalreja.me
                     </a>
                   </li>
                 </ul>
+              </div>
+            </div>
+            <!-- Weekly Commisions Card -->
+            <div class="md:w-1/4 m-2 bg-white rounded-md p-2">
+              <div class="flex flex-col mb-4 px-4">
+                <h3 class="text-brand-dark text-lg font-bold">Weekly Commissions</h3>
+                <span class="text-gray-700 text-sm">by Most Sales in a Week</span>
+              </div>
+              <div class="relative" style="height:300px">
+                <canvas id="bar-chart"></canvas>
+              </div>
+            </div>
+            <!-- Sales by Month Card -->
+            <div class="md:w-1/4 md:flex-grow m-3 bg-gray-800 text-white rounded-md p-2">
+              <div class="flex flex-col mb-4 px-4">
+                <h3 class="text-lg font-bold">Sales By Month</h3>
+                <span class="text-sm">by Most Productive Month</span>
+              </div>
+              <div class="relative bg-gray-800 p-2 rounded-md" style="height:300px">
+                <canvas id="line-chart"></canvas>
               </div>
             </div>
           </div>
@@ -744,20 +744,8 @@ Like: www.facebook.com/abhaytalreja.me
                 </table>
               </div>
             </div>
-            <!-- Revenue Card -->
-            <div class="md:w-1/4 md:flex-grow m-3 bg-white rounded-md p-2">
-              <div class="flex flex-col mb-4 px-4">
-                <h3 class="text-brand-dark text-lg font-bold">Revenue</h3>
-                <span class="text-gray-700 text-sm">categorized by products (interactive)</span>
-              </div>
-              <div class="relative p-2 rounded-md">
-                <canvas id="dognut-chart" class="h-full"></canvas>
-              </div>
-            </div>
-          </div>
-          <div class="md:flex md:flex-wrap md:flex-row">
             <!-- Tasks Overview Card -->
-            <div class="md:w-1/3 md:flex-grow m-2 bg-white rounded-md p-2">
+            <div class="md:w-1/4 m-2 bg-white rounded-md p-2">
               <div class="flex flex-row justify-between px-4">
                 <div class="flex flex-col">
                   <h3 class="text-brand-dark text-lg font-bold">Tasks Overview</h3>
@@ -871,8 +859,20 @@ Like: www.facebook.com/abhaytalreja.me
                 </ul>
               </div>
             </div>
+            <!-- Revenue Card -->
+            <div class="md:w-1/4 md:flex-grow m-3 bg-white rounded-md p-2">
+              <div class="flex flex-col mb-4 px-4">
+                <h3 class="text-brand-dark text-lg font-bold">Revenue</h3>
+                <span class="text-gray-700 text-sm">categorized by products (interactive)</span>
+              </div>
+              <div class="relative p-2 rounded-md">
+                <canvas id="dognut-chart" class="h-full"></canvas>
+              </div>
+            </div>
+          </div>
+          <div class="md:flex md:flex-wrap md:flex-row">
             <!-- Table Card -->
-            <div class="md:w-1/3 md:flex-grow m-2 bg-white rounded-md p-2">
+            <div class="md:flex-grow m-2 bg-white rounded-md p-2">
               <div class="px-4 mb-4">
                 <h3 class="text-brand-dark text-lg font-bold">Agent Stats</h3>
                 <span class="text-gray-500">More than 400+ new members</span>
